KB-64 - 3/6 - Complete. Appled consistent spacing and borders to About Us. Changed background and made it fixed. Fixed other overflowing and aesthetic issues.

--- a/client/src/pages/styles/About.module.css
+++ b/client/src/pages/styles/About.module.css
@@ -9,21 +9,29 @@
     rgb(255, 174, 0),
     rgb(64, 29, 2)
   );
-  background-image: url("../../images/kbengalsbgGradient.png");
+  background-image: url("../../images/bengal-cat-coat-glitter.jpg");
   background-size: cover;
+  background-attachment: fixed;
 }
 
 .header {
-  background-color: burlywood;
+  background-color: #a87d48f5; /*burlywood;*/
   color: white;
   text-align: center;
   font-family: var(--header-text-font);
   font-size: var(--large-header-size);
   padding-top: 1.25rem;
-  height: 6.25rem;
-  outline-style: solid;
+  margin-top: 3vw;
+  margin-bottom: 4vw;
+  /*height: 6.25rem;
+  /*outline-style: solid;
   outline-width: 0.0625rem;
-  outline-color: black;
+  outline-color: black;*/
+  border-style: solid;
+  border-width: 10px;
+  border-radius: 20px;
+  border-color: #e2b78e;
+
 }
 
 .p1 {
@@ -34,23 +42,27 @@
   font-size: var(--generic-text-size);
   padding-top: 0.625rem;
   padding-left: 1.25rem;
-  height: 15.625rem;
+  /*height: 15.625rem;*/
   width: 60%;
   margin-top: 0.0625rem;
-  outline-style: solid;
+  /*outline-style: solid;
   outline-width: 0.0625rem;
   outline-color: black;
-  border-radius: 0.625rem;
+  /*border-radius: 0.625rem;*/
+  border-style: solid;
+  border-width: 10px;
+  border-radius: 20px;
+  border-color: #e2b78e;
 }
 
 .topRightImg {
   background-color: #6b462a;
   align-items: center;
   overflow: hidden;
-  height: 15.625rem;
+  /*height: 15.625rem;*/
   width: 18.75rem;
   margin-top: -15.625rem;
-  margin-left: 70%;
+  margin-left: 65%;
   margin-right: 1.25rem;
   margin-bottom: 1.875rem;
   outline-style: solid;
@@ -71,25 +83,30 @@
   font-size: var(--generic-text-size);
   padding-top: 0.625rem;
   padding-left: 1.25rem;
-  height: 28.125rem;
+  /*height: 28.125rem;*/
   width: 95%;
   margin-top: 0.0625rem;
-  outline-style: solid;
+  margin-bottom: 3vw;
+  /*outline-style: solid;
   outline-width: 0.0625rem;
   outline-color: black;
-  border-radius: 0.625rem;
+  border-radius: 0.625rem;*/
+  border-style: solid;
+  border-width: 10px;
+  border-radius: 20px;
+  border-color: #e2b78e;
 }
 
 .bottomLeftImg {
   background-color: #6b462a;
   align-items: center;
   overflow: hidden;
-  height: 18.75rem;
+  /*height: 18.75rem;*/
   width: 21.875rem;
-  margin-top: 3.125rem;
+  /*margin-top: 3.125rem;
   margin-left: 20%;
   margin-right: 1.25rem;
-  margin-bottom: 1.875rem;
+  margin-bottom: 1.875rem;*/
   outline-style: solid;
   outline-width: 0.625rem;
   outline-color: burlywood;
@@ -104,12 +121,13 @@
   background-color: #6b462a;
   align-items: center;
   overflow: hidden;
-  height: 18.75rem;
+  /*height: 18.75rem;*/
   width: 21.875rem;
-  margin-top: -330px;
+  /*margin-top: -330px;
   margin-left: 60%;
   margin-right: 1.25rem;
-  margin-bottom: 1.875rem;
+  margin-bottom: 1.875rem;*/
+  margin-left: 60%;
   outline-style: solid;
   outline-width: 0.625rem;
   outline-color: burlywood;
@@ -126,15 +144,44 @@
   text-align: left;
   font-family: var(--generic-website-text);
   font-size: var(--generic-text-size);
-  padding-top: 0.625rem;
-  padding-left: 1.25rem;
-  height: 6.25rem;
-  margin-top: 6.25rem;
+  padding-top: 1rem;
+  padding-left: 1rem;
+  margin-bottom: 3vw;
+  /*height: 6.25rem;*/
+  /*margin-top: 6.25rem;
   margin-left: 30%;
   margin-right: 30%;
-  margin-bottom: -1.875rem;
-  outline-style: solid;
+  margin-bottom: -1.875rem;*/
+  /*outline-style: solid;
   outline-width: 0.0625rem;
   outline-color: black;
-  border-radius: 0.625rem;
+  border-radius: 0.625rem;*/
+  border-style: solid;
+  border-width: 10px;
+  border-radius: 20px;
+  border-color: #e2b78e;
+
+}
+
+.containerRow {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  text-align: center;
+  width: relative;
+  position: relative;
+  /*right: 1rem;*/
+  background-color:#4E3A24;
+  margin-top: 1vw;
+  margin-bottom: 3vw;
+}
+
+.imgContainer {
+  max-width: 100%;
+  height: auto;
+  /*background-image: url("../images/bengal-cat.jpg");*/
+  /*background-size: contain;*/
+  border-style: solid;
+  border-color: #a87d48f5;
+  /*position: relative;*/
 }
